--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,8 +25,8 @@ jobs:
 
       - name: Build
         run: |
-          go build action.go
-          chmod +x action
+          go build version_action.go
+          chmod +x version_action
 
       - name: Tag
         run: |
@@ -56,7 +56,7 @@ jobs:
           body_path: release.txt
           tag_name: internal
           files: |
-            action
+            version_action
             LICENSE
     
         
