--- a/action/extract_commit/action.yml
+++ b/action/extract_commit/action.yml
@@ -33,7 +33,7 @@ runs:
         repository_owner: 'jakbytes'
         repository_name: 'version_actions'
         tag: ${{ env.VERSION }}
-        file_name: 'action'
+        file_name: 'version_action'
         make_executable: true
 
     - name: Run Action
