--- a/action/version/action.yml
+++ b/action/version/action.yml
@@ -58,7 +58,7 @@ runs:
       env:
         ACTION_TRIGGER: ${{ inputs.trigger }} || ${{ steps.commit.outputs.type }}
       run: |
-        ./action version ${{ inputs.token }} ${{ github.repository_owner }} ${{ github.event.repository.name }} ${{ github.ref_name }} ${{ inputs.base }} ${{ inputs.prerelease }} ${{ inputs.release_branch }} ${{ env.ACTION_TRIGGER }} ${{ inputs.commitFiles }}
+        ./version_action version ${{ inputs.token }} ${{ github.repository_owner }} ${{ github.event.repository.name }} ${{ github.ref_name }} ${{ inputs.base }} ${{ inputs.prerelease }} ${{ inputs.release_branch }} ${{ env.ACTION_TRIGGER }} ${{ inputs.commitFiles }}
 
     - uses: actions/upload-artifact@v4
       if: inputs.trigger != 'promote' && inputs.trigger != 'sync'
