--- a/action/download_release_asset/action.yml
+++ b/action/download_release_asset/action.yml
@@ -41,3 +41,7 @@ runs:
             echo "File set as executable."
           fi
         fi
+        
+        echo "----"
+        ls -al
+        echo "----"
