--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ test ]
     outputs:
-      action: ${{ steps.version.outputs.action }}
+      action: ${{ steps.version.outputs.type }}
       version: ${{ steps.version.outputs.version }}
     steps:
       - name: Set up Git repository
@@ -63,7 +63,7 @@ jobs:
   release:
     name: Build and Release
     needs: [ version ]
-    if: needs.version.outputs.action == 'release'
+    if: needs.version.outputs.type == 'release'
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
@@ -147,7 +147,7 @@ jobs:
     needs: [ release ]
     if: github.ref_name != 'main'
     outputs:
-      action: ${{ steps.version.outputs.action }}
+      action: ${{ steps.version.outputs.type }}
       version: ${{ steps.version.outputs.version }}
     steps:
       - name: Set Environment Variables
