--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ test ]
     outputs:
-      action: ${{ steps.version.outputs.type }}
+      type: ${{ steps.version.outputs.type }}
       version: ${{ steps.version.outputs.version }}
     steps:
       - name: Set up Git repository
