--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
 
 
       - name: Release
-        uses: softprops/action-gh-release@v0.1.15
+        uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
         with:
           token: ${{ secrets.AUTOMATIONS_BOT_TOKEN }}
           body_path: release.txt
