--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -120,7 +120,7 @@ jobs:
           cat release.txt
 
       - name: Release Version
-        uses: softprops/action-gh-release@v0.1.15
+        uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
         with:
           token: ${{ secrets.AUTOMATIONS_BOT_TOKEN }}
           tag_name: ${{ needs.version.outputs.version }}
@@ -132,7 +132,7 @@ jobs:
 
       - name: Release Internal
         if: github.ref_name == 'staging'
-        uses: softprops/action-gh-release@v0.1.15
+        uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
         with:
           token: ${{ secrets.AUTOMATIONS_BOT_TOKEN }}
           body_path: release.txt
