fix(download_release_asset): use token not github_token

--- a/action/download_release_asset/action.yml
+++ b/action/download_release_asset/action.yml
@@ -17,7 +17,7 @@ inputs:
     description: 'Set the downloaded file as executable with chmod +x'
     required: false
     default: 'false'
-  github_token:
+  token:
     description: 'GitHub token for downloading assets'
     required: true
 runs:
