--- a/action/download_release_asset/action.yml
+++ b/action/download_release_asset/action.yml
@@ -24,12 +24,6 @@ runs:
   using: 'composite'
   steps:
     - shell: bash
-      env:
-        REPOSITORY_OWNER: ${{ inputs.repository_owner }}
-        REPOSITORY_NAME: ${{ inputs.repository_name }}
-        TAG: ${{ inputs.tag }}
-        FILE_NAME: ${{ inputs.file_name }}
-        GITHUB_TOKEN: ${{ inputs.github_token }}
       run: |
         # Check if the file already exists
         if [ -e "${{ inputs.file_name }}" ]; then
@@ -37,11 +31,9 @@ runs:
         else
           DOWNLOAD_URL="https://github.com/${{ inputs.repository_owner }}/${{ inputs.repository_name }}/releases/download/${{ inputs.tag }}/${{ inputs.file_name }}"
           echo "Download URL: $DOWNLOAD_URL"
-      
-          AUTH_HEADER="-H 'Authorization: token $GITHUB_TOKEN'"
-        
-          curl -sL -o "${{ inputs.file_name }}" $AUTH_HEADER "$DOWNLOAD_URL"
-        
+          
+          curl -sL -o "${{ inputs.file_name }}" -H "Authorization: token ${{ inputs.token }}" "$DOWNLOAD_URL"
+          
           if [[ "${{ inputs.make_executable }}" == "true" ]]; then
             chmod +x ${{ inputs.file_name }}
             echo "File set as executable."
